# rustproglang-ch12-minigrep

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs
