[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
description = "The 'minigrep' project from Chapter 12 of 'The Rust Programming Language'"
documentation = "https://github.com/ptdecker/rustproglang-ch12-minigrep/wiki"
readme = "README.md"
homepage = "https://github.com/ptdecker/rustproglang-ch12-minigrep/wiki"
repository = "https://github.com/ptdecker/rustproglang-ch12-minigrep"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
